--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vite App</title>
+    <link rel="shortcut icon" href="/icons/finance-logo-lion.png" type="image/x-icon">
   </head>
-  <body>
+  <body class="bg-blackBg text-white">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
