--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Vite App</title>
     <link rel="shortcut icon" href="/icons/finance-logo-lion.png" type="image/x-icon">
   </head>
-  <body class="bg-blackBg text-white">
+  <body class="bg-slate-100"> <!--Background color set-->
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
