--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
-    <link rel="shortcut icon" href="/icons/finance-logo-lion.png" type="image/x-icon">
+    <title>Finance - gestão inteligente</title>
+    <link rel="shortcut icon" href="/favicon.png" type="image/x-icon">
   </head>
   <body class="bg-slate-100"> <!--Background color set-->
     <div id="app"></div>
