feat: iniciando a estrutura da homepage do projeto

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Finance - gestão inteligente</title>
     <link rel="shortcut icon" href="/favicon.png" type="image/x-icon">
   </head>
-  <body class="bg-slate-100"> <!--Background color set-->
+  <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
